src/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply bg-base-100 text-base-content;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply text-base-content;
    @apply font-bold;
  }

  article {
    @apply prose prose-headings:text-neutral-content prose-headings:font-bold prose-p:text-base-content prose-code:text-base-content;
    @apply prose-strong:text-neutral-content;
    @apply prose-code:text-base-content;
    @apply max-w-full prose prose-img:mx-auto prose-img:my-auto;
    @apply prose-headings:font-bold prose-p:font-serif;
  }
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

html {
  overflow-y: scroll;
}

html,
body {
  @apply size-full;
}

body {
  @apply font-sans antialiased;
  @apply flex flex-col;
}

footer {
  @apply py-5 text-sm;
}

.animate {
  @apply opacity-0 translate-y-3;
  @apply transition-all duration-700 ease-out;
}

.animate.show {
  @apply opacity-100 translate-y-0;
}

html #back-to-top-wrapper {
  @apply opacity-0 pointer-events-none;
  width: 0;
  margin-left: 0;
}

html.scrolled #back-to-top-wrapper {
  @apply opacity-100 pointer-events-auto;
  width: auto;
  margin-left: 0.25rem;
}

button[data-category] {
  transition: opacity 0.2s ease-out;
}

button[data-category]:active {
  opacity: 0.7;
}

